# RocketBuilder

./: CMakeLists.txt  Project_Grading_Rubric_Checklist.xlsx  README.md  Rocket.h  main.cpp
ReferenceMaterial/: Project_Grading_Rubric_Checklist.xlsx
data/: AQUA_27424.tle  GOES13_29155.tle  ISS_25544.tle  Khamvilai-1_Rocket.txt  METOP-B_38771.tle  NOAA15_25338.tle  NOAA18_28654.tle  NOAA19_33591.tle  SES1_36516.tle  TERRA_25994.tle
lib/: SDL2d.lib  SDL2maind.lib  glew32d.exp  glew32d.lib  glew32sd.lib  glfw3.lib  orbit.h  satellite.h
lib/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
premadeRockets/: Falcon 9.txt  JUNO II.txt  Nick-7_Rocket.txt  Nittany-11_Rocket.txt  Rocket_Data_Info.txt  SATURN I.txt  TITAN I.txt  VANGUARD.txt
src/: Archived-GuiManager.cpp  Archived-satellite.cpp  ConsoleManager.cpp  ConsoleManager.h  GuiManager.cpp  GuiManager.h  Rocket.cpp  Rocket.h  booster.cpp  booster.h  global.h  main.cpp  orbit.cpp  orbit.h  satellite.cpp  satellite.h
